--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,11 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+        <dependency>
+            <groupId>com.paypal.sdk</groupId>
+            <artifactId>paypal-server-sdk</artifactId>
+            <version>1.1.0</version>
+        </dependency>
 		<!--flux capacitor -->
 		<dependency>
 			<groupId>io.fluxzero</groupId>
