--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,10 @@
       <artifactId>spring-boot-starter</artifactId>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
-    <dependency>
+    <!--<dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
+    </dependency>-->
     <!-- https://mvnrepository.com/artifact/org.n52.jackson/jackson-datatype-jts -->
     <dependency>
       <groupId>org.n52.jackson</groupId>
@@ -48,11 +48,11 @@
       <artifactId>guava</artifactId>
       <version>33.5.0-jre</version>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <scope>test</scope>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>com.paypal.sdk</groupId>
       <artifactId>paypal-server-sdk</artifactId>
@@ -89,11 +89,11 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-spatial</artifactId>
@@ -106,12 +106,12 @@
       <version>11.18.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-database-postgresql -->
-    <dependency>
+    <!--<dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-database-postgresql</artifactId>
       <version>11.18.0</version>
       <scope>runtime</scope>
-    </dependency>
+    </dependency>-->
   </dependencies>
   <build>
     <finalName>app</finalName>
