Refactor project structure: rename `content-ui` to `content-query`, move classes to appropriate modules, update package names, and comment out unused `pom.xml` configurations.

--- a/pom.xml
+++ b/pom.xml
@@ -197,9 +197,10 @@
     <module>sighting-ui</module>
     <module>sighting-command</module>
     <module>content-command</module>
-    <module>content-ui</module>
+    <module>content-query</module>
     <module>order</module>
     <module>service</module>
     <module>payment</module>
+    <module>sighting-query</module>
   </modules>
 </project>
