--- a/content-query/pom.xml
+++ b/content-query/pom.xml
@@ -7,8 +7,8 @@
     <artifactId>track-rejoice-flux</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>order</artifactId>
-  <name>order</name>
+  <artifactId>content-query</artifactId>
+  <name>content-query</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -17,27 +17,8 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>content-command</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>payment</artifactId>
-      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
