--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>4.0.1</version>
     <relativePath/>
-    <!-- lookup parent from repository -->
   </parent>
   <packaging>pom</packaging>
   <groupId>com.breece</groupId>
@@ -14,7 +13,7 @@
   <name>Fluxzero Basic Java</name>
   <description>A Flux application</description>
   <properties>
-    <java.version>24</java.version>
+    <java.version>25</java.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -124,6 +123,11 @@
             <path>
               <groupId>io.fluxzero</groupId>
               <artifactId>sdk</artifactId>
+            </path>
+            <path>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-simple</artifactId>
+              <version>2.0.17</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
