Refactor project structure: remove `content-query` module, consolidate into `content`, update package names, and adjust module references in `pom.xml`.

--- a/content/pom.xml
+++ b/content/pom.xml
@@ -8,8 +8,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <artifactId>content-command</artifactId>
-  <name>content-command</name>
+  <artifactId>content</artifactId>
+  <name>content</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
