--- a/app/pom.xml
+++ b/app/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>track-rejoice-flux</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>sighting-ui</artifactId>
+  <artifactId>app</artifactId>
   <name>sighting-ui</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -36,10 +36,6 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.fluxzero</groupId>
-      <artifactId>sdk</artifactId>
     </dependency>
     <dependency>
       <groupId>io.fluxzero</groupId>
