Refactor project structure: remove `sighting-query` module, consolidate into `sighting`, update package names, and adjust module references in `pom.xml`.

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -18,17 +18,17 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>sighting-query</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
       <artifactId>service</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>content-query</artifactId>
+      <artifactId>sighting</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>content</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
