--- a/app/pom.xml
+++ b/app/pom.xml
@@ -32,12 +32,6 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>io.fluxzero</groupId>
       <artifactId>sdk</artifactId>
       <scope>test</scope>
@@ -51,6 +45,11 @@
     <dependency>
       <groupId>io.fluxzero</groupId>
       <artifactId>proxy</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.modulith</groupId>
+      <artifactId>spring-modulith-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
