Refactor project structure: consolidate test resources and package structures under `core-api` and `service`, update package names, and adjust `pom.xml` dependencies accordingly.

--- a/core-api/pom.xml
+++ b/core-api/pom.xml
@@ -11,5 +11,21 @@
   <name>core-api</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+    <dependency>
+      <groupId>io.fluxzero</groupId>
+      <artifactId>sdk</artifactId>
+      <scope>test</scope>
+      <classifier>tests</classifier>
+    </dependency>
+    <dependency>
+      <groupId>io.fluxzero</groupId>
+      <artifactId>test-server</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.fluxzero</groupId>
+      <artifactId>proxy</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
