--- a/service/pom.xml
+++ b/service/pom.xml
@@ -16,5 +16,21 @@
       <artifactId>core-api</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.fluxzero</groupId>
+      <artifactId>sdk</artifactId>
+      <scope>test</scope>
+      <classifier>tests</classifier>
+    </dependency>
+    <dependency>
+      <groupId>io.fluxzero</groupId>
+      <artifactId>test-server</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.fluxzero</groupId>
+      <artifactId>proxy</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
