Refactor project structure: consolidate test resources and package structures under `core-api` and `service`, update package names, and adjust `pom.xml` dependencies accordingly.

--- a/content/pom.xml
+++ b/content/pom.xml
@@ -19,12 +19,24 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>sighting-command</artifactId>
+      <artifactId>sighting</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <groupId>io.fluxzero</groupId>
+      <artifactId>sdk</artifactId>
+      <scope>test</scope>
+      <classifier>tests</classifier>
+    </dependency>
+    <dependency>
+      <groupId>io.fluxzero</groupId>
+      <artifactId>test-server</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.fluxzero</groupId>
+      <artifactId>proxy</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <!--<build>
