--- a/sighting/pom.xml
+++ b/sighting/pom.xml
@@ -17,5 +17,10 @@
       <artifactId>core-api</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
