--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,11 @@
       <artifactId>jackson-datatype-jts</artifactId>
       <version>2.0.0</version>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>33.5.0-jre</version>
-    </dependency>
+    </dependency>-->
     <!--<dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-devtools</artifactId>
