--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.datasource.password=password
 #spring.jpa.properties.hibernate.dialect=org.postgresql.Driver
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.flyway.password=${spring.datasource.password}
 spring.flyway.user=${spring.datasource.username}
