Refactor to remove `common` module; migrate sighting and content-related classes to dedicated `sighting.api` and `content.api` packages; update imports, models, and commands accordingly.

--- a/content/pom.xml
+++ b/content/pom.xml
@@ -19,7 +19,7 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>common</artifactId>
+      <artifactId>sighting</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
