--- a/content/pom.xml
+++ b/content/pom.xml
@@ -28,6 +28,16 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
       <groupId>io.fluxzero</groupId>
       <artifactId>sdk</artifactId>
       <scope>test</scope>
