--- a/sighting/pom.xml
+++ b/sighting/pom.xml
@@ -18,13 +18,20 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <groupId>io.fluxzero</groupId>
+      <artifactId>sdk</artifactId>
+      <scope>test</scope>
+      <classifier>tests</classifier>
     </dependency>
     <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <scope>runtime</scope>
+      <groupId>io.fluxzero</groupId>
+      <artifactId>test-server</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.fluxzero</groupId>
+      <artifactId>proxy</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
