--- a/app/pom.xml
+++ b/app/pom.xml
@@ -33,6 +33,10 @@
     </dependency>
 
     <dependency>
+    <groupId>io.fluxzero</groupId>
+    <artifactId>sdk</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.fluxzero</groupId>
       <artifactId>sdk</artifactId>
       <scope>test</scope>
