Introduce JWT-based authentication; add utilities, dependencies, tests, and related configurations.

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.flyway.enabled=true
 spring.flyway.password=${spring.datasource.password}
 spring.flyway.user=${spring.datasource.username}
+
+jwk.domain=https://track-rejoice-dev-7kxie6.us1.zitadel.cloud
+jwk.domain-keys=https://track-rejoice-dev-7kxie6.us1.zitadel.cloud/oauth/v2/keys
+zitadel.domain=356843725604872777
