Configure TypeScript generator to output `track-rejoice.d.ts`.

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -186,6 +186,7 @@
           </execution>
         </executions>
         <configuration>
+          <outputFile>${project.build.directory}/typescript-generator/track-rejoice.d.ts</outputFile>
           <jsonLibrary>jackson2</jsonLibrary>
           <customTypeMappings>
             <customTypeMapping>java.time.LocalDate:string</customTypeMapping>
