--- a/ui/package.json
+++ b/ui/package.json
@@ -18,16 +18,24 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@popperjs/core": "^2.11.8",
     "@trackrejoice/typescriptmodels": "file:../app/target/typescript-generator/trackrejoice-typescriptmodels-1.0.0.tgz",
+    "@types/jquery": "^3.5.33",
+    "bootstrap": "^5.3.8",
+    "lodash": "^4.17.23",
+    "lossless-json": "^4.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^13.0.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.12",
-    "@angular/cli": "^19.2.12",
+    "@angular/cli": "^21.1.1",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.17.23",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
