--- a/ui/angular.json
+++ b/ui/angular.json
@@ -5,6 +5,9 @@
   "schematics": {
     "@schematics/angular:component": {
       "type": "component"
+    },
+    "@schematics/angular:service": {
+      "type": "service"
     }
   },
   "projects": {
