--- a/pom.xml
+++ b/pom.xml
@@ -183,5 +183,6 @@
     <module>content</module>
     <module>order</module>
     <module>service</module>
+    <module>local-auth</module>
   </modules>
 </project>
