Update `getSightings` to return `SightingDocument` with timestamp; adjust backend query logic and UI to include created timestamp display; refine `clean:modules` script.

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -99,7 +99,7 @@
   </dependencies>
 
   <build>
-    <finalName>Flux Rejoice</finalName>
+    <finalName>Track Rejoice</finalName>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
