--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "^21.1.4",
     "@angular/core": "^21.1.4",
     "@angular/forms": "^21.1.4",
+    "@angular/material": "~21.1.4",
     "@angular/platform-browser": "^21.1.4",
     "@angular/platform-browser-dynamic": "^21.1.4",
     "@angular/router": "^21.1.4",
@@ -33,6 +34,7 @@
     "@angular/build": "^21.1.4",
     "@angular/cli": "^21.1.4",
     "@angular/compiler-cli": "^21.1.4",
+    "@angular/material": "^21.1.4",
     "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.33",
