Increase page size, enhance buffer logic, add column for `removeAfterMatching`, and update interceptors with new type mappings

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -206,6 +206,7 @@
           <customTypeMappings>
             <customTypeMapping>com.breece.sighting.api.model.SightingId:string</customTypeMapping>
             <customTypeMapping>com.breece.content.api.model.ContentId:string</customTypeMapping>
+            <customTypeMapping>com.breece.coreapi.user.api.UserId:string</customTypeMapping>
             <customTypeMapping>java.time.LocalDate:string</customTypeMapping>
             <customTypeMapping>java.time.LocalDateTime:string</customTypeMapping>
             <customTypeMapping>java.time.Duration:string</customTypeMapping>
