--- a/ui/angular.json
+++ b/ui/angular.json
@@ -35,7 +35,7 @@
               }
             ],
             "styles": [
-              "src/material-theme.scss",
+              "node_modules/@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
