--- a/ui/angular.json
+++ b/ui/angular.json
@@ -36,7 +36,8 @@
             ],
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/material-theme.scss"
             ],
             "scripts": []
           },
